versioned_docs/version-2.18.0/tokens/storage/index.md
---
description: "Storage and display options for Zaparoo NFC card collections: binders, cassette cases, Nintendo Switch cases, card boxes, and 3D printed holders."
keywords: [zaparoo card storage, nfc card collection, zaparoo binder, game card storage]
---

# Storage

As your collection grows, you'll want a way to organize and display your [NFC cards](../nfc/index.md). These are a few options Zaparoo users have shared or adapted from trading card and retro gaming collections.

<Gallery media={[
  { src: "/img/showcase/MechaRebecca_cassette_cases.webp", width: 1200, height: 606, alt: "Cassette cases used to store NFC cards" },
  { src: "/img/showcase/BigBlue709_custom_switch_cases.webp", width: 1200, height: 900, alt: "Nintendo Switch cases with custom cover inserts for NFC cards" },
  { src: "/img/showcase/ArielAces_card_storage.webp", width: 1200, height: 900, alt: "Sectioned acrylic box for organizing NFC cards" },
]} />

*Storage shared by MechaRebecca in the [Showcase gallery](/showcase/), plus BigBlue709 and ArielAces in [Community Showcase #1](/blog/community-showcase-1).*

## Binders

Binders work well when you want to browse cards in pages. The pocket size depends on the cards you're using:

**Standard NFC cards** (credit card size, 85.6 x 54mm) fit in K-pop photo card binders. Search for `K-pop card binder` or `photocard binder`.

**Trading card size** NFC cards, including cards from the <ProductLink href="https://shop.zaparoo.com/" store="shop">Zaparoo Shop</ProductLink>, fit in standard trading card binders with 9-pocket pages, the same kind used for Pokemon, Magic: The Gathering, and other TCGs.

Top-loading pockets are usually better than side-loading pockets because cards are less likely to slip out as you turn pages. If you use double-sided pages, pulling cards from the back side can be awkward once the binder is full.

## Cassette cases {#cassette-cases}

<Gallery
  photos={[
    {
      src: "/img/docs/tokens/cassette-Front.jpg",
      width: 1200,
      height: 421,
      alt: "Front artwork for a cassette case cover"
    },
    {
      src: "/img/docs/tokens/cassette-Back.jpg",
      width: 1200,
      height: 759,
      alt: "Back artwork for a cassette case cover"
    },
    {
      src: "/img/docs/tokens/cassette-Spine.jpg",
      width: 1824,
      height: 1026,
      alt: "Spine artwork for cassette case covers"
    }
  ]}
/>

Cassette cases fit well with retro gaming setups. Add printed wrap covers and the cases start to feel like a physical shelf for a digital game library.

Create covers in [Zaparoo Designer](../../designer/index.md) by choosing the **Cassette tape case** media type and one of the cassette cover templates, or use the [NFC Cassette Cover Generator](https://github.com/Anime0t4ku/NFC-Cassette-Cover-Generator), a desktop app by [Anime0t4ku](https://github.com/Anime0t4ku) that exports a single print-ready wrap cover with SteamGridDB and TMDB artwork import. Print covers on glossy photo paper at 4.11 by 4 inches (10.44 by 10.16 cm).

For credit card size NFC cards, a [3D printable inlay](https://www.printables.com/model/950825-tapto-cassette-case-insert) holds one, two, or three cards inside the case. The same cases store Game Boy cartridges with a [different insert](https://www.printables.com/model/958451-gameboy-cassette-case-insert) once the internal cassette pins are removed or trimmed.

<img src="/img/docs/tokens/Cassette-gb.png" alt="Game Boy cartridges stored in cassette cases" width="300" />

## Nintendo Switch cases

Empty retail-style Nintendo Switch replacement cases are another shelf-friendly option for credit card size NFC cards, with enough room inside for a card and printed cover art.

Search for `empty Nintendo Switch game case` or `Nintendo Switch replacement case`. Avoid compact Switch cartridge wallets or game card holders; those slots are made for small Switch game cards, not full-size NFC cards.

## Card boxes

Long card boxes, the kind used for bulk Magic: The Gathering or sports card storage, work well for larger collections where you want to flip through cards quickly instead of displaying them in pages.

The [community storage projects](../../community-projects/index.mdx#storage) directory includes printable boxes, dividers, cassette inserts, cases, and card stands.

## Cases and holders

The community has designed a range of 3D printed storage cases and card holders. Browse the [community storage projects](../../community-projects/index.mdx#storage) for downloadable designs.
